--- a/productos.html
+++ b/productos.html
@@ -16,10 +16,10 @@
     </header>
 
     <nav class="menu">
-        <a href="#">Inicio</a>
-        <a href="#">Productos</a>
+        <a href="index.html">Inicio</a>
+        <a href="productos.html">Productos</a>
         <a href="#">Acerca de mi</a>
-        <a href="#">Contacto</a>
+        <a href="contacto.html">Contacto</a>
     </nav>
     
     <section class="contenido-productos">
