--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="index.html">Inicio</a>
           <a href="productos.html">Productos</a>
           <a href="#">Acerca de mi</a>
-          <a href="#">Contacto</a>
+          <a href="contacto.html">Contacto</a>
 </nav>    
 
 <section class="contenido_principal">
