--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AlmohadonesDeco</title>
     <link rel="stylesheet" href="css/stylesdos.css">
     
 
@@ -18,7 +18,7 @@
         <nav class="menu">
             <a href="index.html">Inicio</a>
             <a href="productos.html">Productos</a>
-            <a href="#">Acerca de mi</a>
+            <a href="acercademi.html">Acerca de mi</a>
             <a href="contacto.html">Contacto</a>
         <nav/>
     </div>      
